<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/guardar" android:title="@string/guardar"
        android:icon="@drawable/save"
        android:orderInCategory="100" app:showAsAction="always"
        />
    <item android:id="@+id/brush" android:title="@string/brush"
        android:icon="@drawable/brush"
        android:orderInCategory="100" app:showAsAction="always"
        />
    <item android:id="@+id/pickColor" android:title="@string/triangulo"
        android:icon="@drawable/colors"
        android:orderInCategory="100" app:showAsAction="always"
        />

    <item android:id="@+id/circulo" android:title="@string/circulo"

        android:orderInCategory="100" app:showAsAction="never"
        />
    <item android:id="@+id/rectangulo" android:title="@string/rectangulo"

        android:orderInCategory="100" app:showAsAction="never"
        />
    <item android:id="@+id/triangulo" android:title="@string/triangulo"

        android:orderInCategory="100" app:showAsAction="never"
        />


</menu>
